# fastapi

./: books.py  books2.py  pyproject.toml
TodoApp/: .env  auth.py  database.py  main.py  models.py  todos.db  todosapp.db
TodoApp/routers/: admin.py  auth.py  todos.py  users.py
test/: test_example.py
